package edu.fiuba.algo3.model.Randomizador;

public interface Randomizer {
  boolean random(double probabilidad);
}
